Update Dockerfile to use python:3.11-slim and add plotting script for ln(mu) analysis

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:24.04
+FROM python:3.11-slim
 
 ENV DEBIAN_FRONTEND=noninteractive
 
@@ -7,8 +7,11 @@ RUN apt-get update && apt-get install -y \
     libgsl-dev \
     && rm -rf /var/lib/apt/lists/*
 
-WORKDIR /work 
+WORKDIR /work
 COPY . /work
+
+# Install Python packages needed by the plotting script
+RUN pip3 install --no-cache-dir numpy matplotlib
 
 RUN chmod +x /work/scripts/build.sh && /work/scripts/build.sh
 
