Add lnmu_histogram.pdf generated by Matplotlib and improved CMakeList and cpp to make more Library-centric architecture. Preparation for wrapping

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -6,20 +6,41 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 find_package(GSL REQUIRED)
 
-add_executable(main_lensing
+# ===============================
+# Core physics library
+# ===============================
+
+add_library(gwcore
     basics.cpp
     cosmology.cpp
     lensing.cpp
+    lnmu_wrapper.cpp
+)
+
+target_link_libraries(gwcore
+    PUBLIC GSL::gsl GSL::gslcblas m
+)
+
+target_include_directories(gwcore
+    PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}
+)
+
+# ===============================
+# Executables
+# ===============================
+
+add_executable(main_lensing
     main_lensing.cpp
 )
 
-target_link_libraries(main_lensing PRIVATE GSL::gsl GSL::gslcblas m)
+target_link_libraries(main_lensing
+    PRIVATE gwcore
+)
 
 add_executable(main_sample_lnmu
-  basics.cpp
-  cosmology.cpp
-  lensing.cpp
-  main_sample_lnmu.cpp
+    main_sample_lnmu.cpp
 )
-target_link_libraries(main_sample_lnmu PRIVATE GSL::gsl GSL::gslcblas m)
 
+target_link_libraries(main_sample_lnmu
+    PRIVATE gwcore
+)
