First attempt to add the api and pybind. Failed and some issues with docker

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,19 +1,18 @@
 FROM python:3.11-slim
-
 ENV DEBIAN_FRONTEND=noninteractive
 
-RUN apt-get update && apt-get install -y \
-    build-essential cmake pkg-config \
-    libgsl-dev \
-    && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    build-essential cmake pkg-config libgsl-dev \
+  && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /work
 COPY . /work
 
-# Install Python packages needed by the plotting script
-RUN pip3 install --no-cache-dir numpy matplotlib
+RUN pip install --no-cache-dir numpy matplotlib scipy pybind11
 
-RUN chmod +x /work/scripts/build.sh && /work/scripts/build.sh
+# Build explicitly with pybind11_DIR set
+RUN chmod +x /work/scripts/build.sh && \
+    export pybind11_DIR=$(python -m pybind11 --cmakedir) && \
+    /work/scripts/build.sh
 
 CMD ["bash"]
-
